@@ -1,7 +1,8 @@
 Arts2 {
-telsem_atlasesReadAscii(directory = "Atlas")
+
+telsem_atlasesReadAscii(directory = "/home/simon/src/telsem2/Atlas")
 TelsemAtlasCreate(telsem_atlas)
-Extract(telsem_atlas, telsem_atlases, 3)
+Extract(telsem_atlas, telsem_atlases, 0)
 
 MatrixCreate(emis)
 
@@ -13,10 +14,10 @@ VectorSet(fs, [300e9])
 
 telsemStandalone(emis, -30.0, 302.0, 15.0, fs, telsem_atlas)
 
-Compare(REFemis,  emis, 1e-6)
+#Compare(REFemis,  emis, 1e-6)
 
 VectorCreate(emis_vector)
-telsemAtlasLookup(emis_vector, -88.625, 10.375, telsem_atlas)
+telsemAtlasLookup(emis_vector, 89.75, 76.0, telsem_atlas)
 Print(emis_vector, 0)
 
 }
